fix(ui): fix loading layer z-index
fix loading layer z-index

--- a/packages/ui/src/components/Toast/index.module.scss
+++ b/packages/ui/src/components/Toast/index.module.scss
@@ -8,6 +8,7 @@
   transform: translateY(-50%);
   @include _.flex-column;
   pointer-events: none;
+  z-index: 300;
 }
 
 .toast {
